--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Admin Panel</title>
 </head>
@@ -20,15 +21,15 @@
             <a href="#"> <img src="#" alt="Profile picture"> </a>
             <a href="#" class="profile-name">Bruce Willis</a>
         </section>
-        <section>
+        <section class="lower-header">
             <img src="#" alt="Profile picture">
             <p>Hi there,</p>
             <h2>Bruce Willis (@bruce)</h2>
             <nav>
                 <ul>
-                    <li><button class="nav-btn"></button></li>
-                    <li><button class="nav-btn"></button></li>
-                    <li><button class="nav-btn"></button></li>
+                    <li><button class="nav-btn">New</button></li>
+                    <li><button class="nav-btn">Upload</button></li>
+                    <li><button class="nav-btn">Share</button></li>
                 </ul>
             </nav>
         </section>
