Grid layout ready

--- a/index.html
+++ b/index.html
@@ -37,20 +37,34 @@
     <aside>
         <label> <img src="#" alt="Dashboard-img"> Dashboard </label>
         <ul class="aside-links">
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li> <img src="" alt="" srcset=""> Home</li>
+            <li> <img src="" alt="" srcset=""> Profile</li>
+            <li> <img src="" alt="" srcset=""> Messages</li>
+            <li> <img src="" alt="" srcset=""> History</li>
+            <li> <img src="" alt="" srcset=""> Tasks</li>
+            <li> <img src="" alt="" srcset=""> Communities</li>
             <br>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li> <img src="" alt="" srcset=""> Settings</li>
+            <li> <img src="" alt="" srcset=""> Support</li>
+            <li> <img src="" alt="" srcset=""> Privacy</li>
         </ul>
     </aside>
     <main>
-        <p>Main here</p>
+        <h2 class="star-movies">Movies you starred in</h2>
+        <section class="cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </section>
+        <section class="side-cards">
+            <h2 class="trend">Announcements</h2>
+            <div class="big-card"></div>
+            <h2 class="trend">Trending</h2>
+            <div class="big-card"></div>
+        </section>
     </main>
     <footer>
         <p>footer</p>
