Finish aside styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
     <title>Admin Panel</title>
 </head>
 <body>
@@ -35,18 +38,18 @@
         </section>
     </header>
     <aside>
-        <label> <img src="#" alt="Dashboard-img"> Dashboard </label>
+        <label class="dashbaord-logo"> <img src="monitor-dashboard.svg" alt="Dashboard"> Dashboard </label>
         <ul class="aside-links">
-            <li> <img src="" alt="" srcset=""> Home</li>
-            <li> <img src="" alt="" srcset=""> Profile</li>
-            <li> <img src="" alt="" srcset=""> Messages</li>
-            <li> <img src="" alt="" srcset=""> History</li>
-            <li> <img src="" alt="" srcset=""> Tasks</li>
-            <li> <img src="" alt="" srcset=""> Communities</li>
+            <li> <img src="home.svg" alt="home"> Home</li>
+            <li> <img src="account.svg" alt="profile"> Profile</li>
+            <li> <img src="msg.svg" alt="messages"> Messages</li>
+            <li> <img src="help.svg" alt="history"> History</li>
+            <li> <img src="calendar.svg" alt="tasks"> Tasks</li>
+            <li> <img src="account-group.svg" alt="communities"> Community</li>
             <br>
-            <li> <img src="" alt="" srcset=""> Settings</li>
-            <li> <img src="" alt="" srcset=""> Support</li>
-            <li> <img src="" alt="" srcset=""> Privacy</li>
+            <li> <img src="cog.svg" alt="settings" > Settings</li>
+            <li> <img src="help.svg" alt="support" > Support</li>
+            <li> <img src="shield.svg" alt="privacy" > Privacy</li>
         </ul>
     </aside>
     <main>
