Finish upper-header

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
    <div class="grid-container fullpage">
     <header>
         <section class="search-area">
-            <label for="search-bar">🔎</label>
+            <label for="search-bar"><img src="search.svg" alt="search" class="header-svg" ></label>
             <input type="search" name="search" id="search-bar">
         </section>
         <section class="profile-area">
-            <a href="#"> <img src="#" alt="Bell"> </a>
-            <a href="#"> <img src="#" alt="Profile picture"> </a>
+            <a href="#"> <img src="bell.svg" alt="Bell" class="header-svg"> </a>
+            <a href="#"> <img src="bruce.jpg" alt="Profile picture" class="header-svg profile-pic"> </a>
             <a href="#" class="profile-name">Bruce Willis</a>
         </section>
         <section class="lower-header">
-            <img src="#" alt="Profile picture">
+            <img src="bruce.jpg" alt="Profile picture" class="big-profile-pic">
             <p>Hi there,</p>
             <h2>Bruce Willis (@bruce)</h2>
-            <nav>
+            <nav class="nav-bar header-nav">
                 <ul>
                     <li><button class="nav-btn">New</button></li>
                     <li><button class="nav-btn">Upload</button></li>
@@ -38,7 +38,7 @@
         </section>
     </header>
     <aside>
-        <label class="dashbaord-logo"> <img src="monitor-dashboard.svg" alt="Dashboard"> Dashboard </label>
+        <label class="dashbaord-logo"> <img src="monitor-dashboard.svg" alt="Dashboard"> <p class="dash-txt">Dashboard</p> </label>
         <ul class="aside-links">
             <li> <img src="home.svg" alt="home"> Home</li>
             <li> <img src="account.svg" alt="profile"> Profile</li>
