Finish Header alignment

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </section>
         <section class="lower-header">
             <img src="bruce.jpg" alt="Profile picture" class="big-profile-pic">
-            <p>Hi there,</p>
-            <h2>Bruce Willis (@bruce)</h2>
+            <p class="hi">Hi there,</p>
+            <h2 class="lower-header your-name">Bruce Willis (@bruce)</h2>
             <nav class="nav-bar header-nav">
                 <ul>
                     <li><button class="nav-btn">New</button></li>
