--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <h2 class="star-movies">Movies you starred in</h2>
         <section class="cards">
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>Die Hard</h4>
                 <p>Die Hard is an American action film series that originated with Roderick Thorp's 1979 novel Nothing Lasts Forever. All five films revolve around the main character of John McClane, a New York City/Los Angeles police detective who continually finds himself in the middle of a crisis where he is the only hope against disaster.[3] The films have grossed a combined $1.4 billion worldwide.
                     Film(s)	
@@ -71,27 +72,32 @@
                 </p>
             </div>
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>RED</h4>
             <p>Red is a 2010 American action comedy film loosely inspired by the Homage Comics limited series of the same name. Produced by Di Bonaventura Pictures and distributed by Summit Entertainment, it is the first film in the Red series. Directed by Robert Schwentke and written by Jon Hoeber and Erich Hoeber, it stars Bruce Willis, Morgan Freeman, John Malkovich, Helen Mirren, Karl Urban and Mary-Louise Parker, alongside Rebecca Pidgeon, Brian Cox, Richard Dreyfuss, Julian McMahon, Ernest Borgnine, and James Remar. Red follows Frank Moses (Willis),
                  a former black-ops agent who reunites with his old team to capture an assassin who has vowed to kill him.</p>
             </div>
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>Pulp Fiction</h4>
                 <p>Pulp Fiction is a 1994 American crime film written and directed by Quentin Tarantino, who conceived it with Roger Avary.[4] Starring John Travolta, Samuel L. Jackson, Bruce Willis, Tim Roth, Ving Rhames, and Uma Thurman, it tells several stories of crime in Los Angeles, California. The title refers to the pulp magazines and hardboiled crime novels popular during the mid-20th century, known for their graphic violence and punchy dialogue.
                     Pulp Fiction is widely regarded as Tarantino's masterpiece, with particular praise for its screenwriting.[5] The self-reflexivity, unconventional structure, and extensive homage and pastiche have led critics to describe it as a touchstone of postmodern film. It is often considered a cultural watershed, influencing films and other media that adopted elements of its style.
                 </p>
             </div>
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>Sin city</h4>
                 <p>As far as comic book movies go, Robert Rodriguez and Frank Miller's adaptation of the latter's graphic novel Sin City ranks among the very best, and though the film is ensemble-driven in nature, Willis is clearly positioned as the star. His John Hartigan is positioned as a hero early on, when he tries to stop a child murderer (Nick Stahl) from raping and killing young Nancy Callahan. This may be a heightened world, but Willis is still the good guy, the one who not only wants to protect Nancy, but is willing to lay his life --and his freedom -- on the line to ensure her safety.
 
                     Years later, after being framed into silence, Hartigan is fresh out of prison and eager to reconnect with Nancy (Jessica Alba), who has grown up to be an exotic dancer. The child killer he stopped earlier is back and hungry for revenge, and as long as Hartigan is alive, she'll always be in danger. He's forced to make an impossible choice, one that Willis sells quite well for an actor who doesn't have a whole lot of death scenes.</p>
             </div>
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>The Expendables 1-2</h4>
                 <p>The Expendables is an American ensemble action thriller franchise spanning a film series, written by Sylvester Stallone, based upon characters created by David Callaham, and additional media. The film stars an ensemble cast notably of Sylvester Stallone and Jason Statham, produced by Basil Iwanyk and Guymon Casady. The film series, an acknowledgement to former blockbuster action films made in the 1980s and 1990s, also pays homage to action stars of former decades, and the more recent stars in action. The series consists of four films: The Expendables (2010), The Expendables 2 (2012), The Expendables 3 (2014), the upcoming The Expendables 4 (2023), and an ongoing comic book series: The Expendables Go to Hell (2021). </p>
             </div>
             <div class="card">
+                <div class="deco-bar"></div>
                 <h4>Looper</h4>
                 <p>Looper is a 2012 American science fiction action-thriller film[5] written and directed by Rian Johnson, and produced by Ram Bergman and James D. Stern. It stars Bruce Willis, Joseph Gordon-Levitt, and Emily Blunt. It revolves around "present-day" contract killers called "loopers" hired by criminal syndicates from the future to terminate victims whom they send back through time.
 
