Add big cards content

--- a/index.html
+++ b/index.html
@@ -106,9 +106,48 @@
         </section>
         <section class="side-cards">
             <h2 class="trend">Announcements</h2>
-            <div class="big-card"></div>
+            <div class="big-card">
+                <article>
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis itaque quae ab pariatur veritatis.</p>
+                </article>
+                <div class="line-break"></div>
+                <article>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, corrupti.</p>
+                </article>
+                <div class="line-break"></div>
+                <article>
+                    <h4>Lorem, ipsum.</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae eos inventore aperiam!</p>
+                </article>
+            </div>
             <h2 class="trend">Trending</h2>
-            <div class="big-card"></div>
+            <div class="big-card">
+                <article>
+                    <img src="/profile-pics/paulw.jpg" alt="paul-walker" class="big-profile-pic">
+                    <h6>@paulw</h6>
+                    <p>Paul Walker</p>
+                </article>
+                <br>
+                <article>
+                    <img src="/profile-pics/vind.jpg" alt="vin-diesel" class="big-profile-pic">
+                    <h6>@vind</h6>
+                    <p>Vin Diesel</p>
+                </article>
+                <br>
+                <article>
+                    <img src="/profile-pics/dwaynej.jpg" alt="dwayne-jhonson" class="big-profile-pic">
+                    <h6>@dwaynej</h6>
+                    <p>Dwayne Jhonson</p>
+                </article>
+                <br>
+                <article>
+                    <img src="/profile-pics/jasons.jpg" alt="json-statham" class="big-profile-pic">
+                    <h6>@jasons</h6>
+                    <p>Jason Statham</p>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
