--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
         </section>
         <section class="side-cards">
             <h2 class="trend">Announcements</h2>
-            <div class="big-card">
+            <div class="big-card announ">
                 <article>
                     <h4>Lorem, ipsum dolor.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis itaque quae ab pariatur veritatis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, officiis facilis explicabo modi dolorem illum architecto ducimus officia ex rerum!</p>
                 </article>
                 <div class="line-break"></div>
                 <article>
                     <h4>Lorem ipsum dolor sit.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, corrupti.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, ad rem non autem laboriosam enim maiores assumenda necessitatibus. Blanditiis nisi quam asperiores illum similique impedit.</p>
                 </article>
                 <div class="line-break"></div>
                 <article>
@@ -123,7 +123,7 @@
                 </article>
             </div>
             <h2 class="trend">Trending</h2>
-            <div class="big-card">
+            <div class="big-card trend-card">
                 <article>
                     <img src="/profile-pics/paulw.jpg" alt="paul-walker" class="big-profile-pic">
                     <h6>@paulw</h6>
@@ -132,13 +132,13 @@
                 <br>
                 <article>
                     <img src="/profile-pics/vind.jpg" alt="vin-diesel" class="big-profile-pic">
-                    <h6>@vind</h6>
+                    <h6>@diesel</h6>
                     <p>Vin Diesel</p>
                 </article>
                 <br>
                 <article>
                     <img src="/profile-pics/dwaynej.jpg" alt="dwayne-jhonson" class="big-profile-pic">
-                    <h6>@dwaynej</h6>
+                    <h6>@therock</h6>
                     <p>Dwayne Jhonson</p>
                 </article>
                 <br>
@@ -151,7 +151,7 @@
         </section>
     </main>
     <footer>
-        <p>footer</p>
+        <br>
     </footer>
    </div>
     
