Fix routes of images

--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@
             <h2 class="trend">Trending</h2>
             <div class="big-card trend-card">
                 <article>
-                    <img src="/profile-pics/paulw.jpg" alt="paul-walker" class="big-profile-pic">
+                    <img src="./profile-pics/paulw.jpg" alt="paul-walker" class="big-profile-pic">
                     <h6>@paulw</h6>
                     <p>Paul Walker</p>
                 </article>
                 <br>
                 <article>
-                    <img src="/profile-pics/vind.jpg" alt="vin-diesel" class="big-profile-pic">
+                    <img src="./profile-pics/vind.jpg" alt="vin-diesel" class="big-profile-pic">
                     <h6>@diesel</h6>
                     <p>Vin Diesel</p>
                 </article>
                 <br>
                 <article>
-                    <img src="/profile-pics/dwaynej.jpg" alt="dwayne-jhonson" class="big-profile-pic">
+                    <img src="./profile-pics/dwaynej.jpg" alt="dwayne-jhonson" class="big-profile-pic">
                     <h6>@therock</h6>
                     <p>Dwayne Jhonson</p>
                 </article>
                 <br>
                 <article>
-                    <img src="/profile-pics/jasons.jpg" alt="json-statham" class="big-profile-pic">
+                    <img src="./profile-pics/jasons.jpg" alt="json-statham" class="big-profile-pic">
                     <h6>@jasons</h6>
                     <p>Jason Statham</p>
                 </article>
