Fix routing of images, again.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
    <div class="grid-container fullpage">
     <header>
         <section class="search-area">
-            <label for="search-bar"><img src="/images/search.svg" alt="search" class="header-svg" ></label>
+            <label for="search-bar"><img src="./images/search.svg" alt="search" class="header-svg" ></label>
             <input type="search" name="search" id="search-bar">
         </section>
         <section class="profile-area">
-            <a href="#"> <img src="/images/bell.svg" alt="Bell" class="header-svg"> </a>
-            <a href="#"> <img src="/images/bruce.jpg" alt="Profile picture" class="header-svg profile-pic"> </a>
+            <a href="#"> <img src="./images/bell.svg" alt="Bell" class="header-svg"> </a>
+            <a href="#"> <img src="./images/bruce.jpg" alt="Profile picture" class="header-svg profile-pic"> </a>
             <a href="#" class="profile-name">Bruce Willis</a>
         </section>
         <section class="lower-header">
-            <img src="/images/bruce.jpg" alt="Profile picture" class="big-profile-pic">
+            <img src="./images/bruce.jpg" alt="Profile picture" class="big-profile-pic">
             <p class="hi">Hi there,</p>
             <h2 class="lower-header your-name">Bruce Willis (@bruce)</h2>
             <nav class="nav-bar header-nav">
@@ -38,18 +38,18 @@
         </section>
     </header>
     <aside>
-        <label class="dashbaord-logo"> <img src="/images/monitor-dashboard.svg" alt="Dashboard"> <p class="dash-txt">Dashboard</p> </label>
+        <label class="dashbaord-logo"> <img src="./images/monitor-dashboard.svg" alt="Dashboard"> <p class="dash-txt">Dashboard</p> </label>
         <ul class="aside-links">
-            <li> <img src="/images/home.svg" alt="home"> Home</li>
-            <li> <img src="/images/account.svg" alt="profile"> Profile</li>
-            <li> <img src="/images/msg.svg" alt="messages"> Messages</li>
-            <li> <img src="/images/help.svg" alt="history"> History</li>
-            <li> <img src="/images/calendar.svg" alt="tasks"> Tasks</li>
-            <li> <img src="/images/account-group.svg" alt="communities"> Community</li>
+            <li> <img src="./images/home.svg" alt="home"> Home</li>
+            <li> <img src="./images/account.svg" alt="profile"> Profile</li>
+            <li> <img src="./images/msg.svg" alt="messages"> Messages</li>
+            <li> <img src="./images/help.svg" alt="history"> History</li>
+            <li> <img src="./images/calendar.svg" alt="tasks"> Tasks</li>
+            <li> <img src="./images/account-group.svg" alt="communities"> Community</li>
             <br>
-            <li> <img src="/images/cog.svg" alt="settings" > Settings</li>
-            <li> <img src="/images/help.svg" alt="support" > Support</li>
-            <li> <img src="/images/shield.svg" alt="privacy" > Privacy</li>
+            <li> <img src="./images/cog.svg" alt="settings" > Settings</li>
+            <li> <img src="./images/help.svg" alt="support" > Support</li>
+            <li> <img src="./images/shield.svg" alt="privacy" > Privacy</li>
         </ul>
     </aside>
     <main>
